syntax = "proto3";

package profile.v1;
option go_package="github.com/msqtt/sevencowcloud-shortvideo-service/api/pb/v1/profile;pb_prf";

import "google/api/annotations.proto";
import "profile/update_message.proto";

service ProfileService {
	rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse) {
		option (google.api.http) = {
			put: "/v1/profile/{user_id}"
      body: "*"
		};
	}
}
